# ai-cpp

./: README.md
neural-network/: CMakeLists.txt  neural-network.h
neural-network/src/: main.cpp  neural-network.cpp
opencv-vision/: CMakeLists.txt  face-detector.h  object-tracker.h
opencv-vision/src/: face-detector.cpp  main.cpp  object-tracker.cpp
